--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -39,9 +39,10 @@ auth_id = fdslight
 ;是否开启https sni,此选项可支持一个IP地址多域名,CDN或者单IP多域名的网站需要此选项开启,默认关闭(不建议开启)
 enable_https_sni = 0
 ;是否开启https sni主机名,如果开启sni并且此项被注释,那么默认就是连接的主机
-;https_sni_host = www.example.com
+https_sni_host = www.example.com
 ;是否启用严格https模式,严格https将开启ca证书认证,防止中间人攻击
 ;软件在不使用严格模式时,软件自身对https有一套简单验证规则,但如果中间人攻击那么会泄露http握手请求头部
+;使用严格https时如果未设置https_sni_host,那么程序使用host进行域名与证书匹配
 strict_https = 1
 
 ;公共配置选项
