--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -29,6 +29,9 @@ heartbeat_timeout = 20
 ;是否把流量加载到https上面,如果隧道是udp协议那么该选项会被忽略
 tunnel_over_https = 1
 
+;流量限制大小,如果为0表示不限制,流量单位为GB
+traffic_limit_size = 0
+
 ;把流量加载到https上的相关配置
 [tunnel_over_https]
 ;URL参数,此参数用于nginx等反向代理进行url重写
