--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -47,7 +47,9 @@ https_sni_host = www.example.com
 ;软件在不使用严格模式时,软件自身对https有一套简单验证规则,但如果中间人攻击那么会泄露http握手请求头部
 ;使用严格https时如果未设置https_sni_host,那么程序使用host进行域名与证书匹配
 strict_https = 1
-
+;TLS加密算法,不同算法用逗号隔开,例如ECDHE+AESGCM,ECDHE+CHACHA20,!MD5，如果为NULL表示系统默认
+;ciphers=ECDHE+AESGCM,ECDHE+CHACHA20,DHE+AESGCM,DHE+CHACHA20,ECDH+AESGCM,DH+AESGCM,ECDH+AES,DH+AES,RSA+AESGCM,RSA+AES,!aNULL,!eNULL,!MD5,!DSS
+ciphers=NULL
 ;公共配置选项
 [public]
 ;不走代理的DNS服务器,可以填写IPv6或者ipv4地址
