--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -8,6 +8,8 @@ host = www.example.com
 port = 2500
 ;隧道类型,可选的有 udp和tcp
 tunnel_type = tcp
+;绑定本地udp端口,隧道使用UDP协议有效,0表示不绑定,如果大于0那么就是非0端口
+bind_udp_local_port = 0
 ;加密模块,可选的有aes和noany,aes表示aes加密,noany表示不使用加密,如果开启tunnel_over_https选项,一定要选择noany,避免加密过多导致速度太慢
 crypto_module = noany
 ;加密配置文件,在fdslight_etc下面,如果加密是noany,那么配置文件选择noany.json
@@ -32,6 +34,10 @@ tunnel_over_https = 1
 ;流量限制大小,如果为0表示不限制,流量单位为GB
 traffic_limit_size = 0
 
+; 当收到对端数据的时候再发送UDP隧道数据,如果未收到那么就不发送
+# 此选项需要配合bind_udp_local_port使用,一般情况下不需要开启,不然无法发送本地数据
+only_permit_send_udp_data_when_first_recv_peer = 0
+
 ;把流量加载到https上的相关配置
 [tunnel_over_https]
 ;URL参数,此参数用于nginx等反向代理进行url重写
@@ -49,7 +55,7 @@ https_sni_host = www.example.com
 strict_https = 1
 ;TLS加密算法,不同算法用逗号隔开,例如ECDHE+AESGCM,ECDHE+CHACHA20,!MD5，如果为NULL表示系统默认
 ;ciphers=ECDHE+AESGCM,ECDHE+CHACHA20,DHE+AESGCM,DHE+CHACHA20,ECDH+AESGCM,DH+AESGCM,ECDH+AES,DH+AES,RSA+AESGCM,RSA+AES,!aNULL,!eNULL,!MD5,!DSS
-ciphers=NULL
+ciphers = NULL
 ;公共配置选项
 [public]
 ;不走代理的DNS服务器,可以填写IPv6或者ipv4地址
