--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -34,7 +34,7 @@ tunnel_over_https = 1
 ;流量限制大小,如果为0表示不限制,流量单位为GB
 traffic_limit_size = 0
 
-# 服务器是否来自于NAT,有些服务器地址实际是NAT地址,开启此参数后能和位于NAT里的服务器通信
+# 服务器是否来自于NAT,有些服务器地址实际是NAT地址,开启此参数后能和位于NAT里的服务器通信,此参数只对UDP有效
 # 注意通信时需要设置bind_udp_local_port
 server_host_from_nat = 0
 ; 当收到对端数据的时候再发送UDP隧道数据,如果未收到那么就不发送
