--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -65,8 +65,10 @@ ciphers = NULL
 remote_dns = 223.6.6.6
 
 ;是否开启IPV6流量
-;注意:这是实验性支持,请最好不要开启这个选项
 enable_ipv6_traffic = 0
+
+;是否屏蔽IPv6 DNS请求
+enable_ipv6_dns_drop = 0
 
 ;local模式的配置
 [local]
