--- a/fdslight_etc/racs.ini
+++ b/fdslight_etc/racs.ini
@@ -18,6 +18,11 @@ private_key = ixcsys
 
 ;出口路由
 [network]
+# 软件启动后会读取本机所有网卡的IP地址,并重写源IP地址为配置后的IP地址
+# 本机重写后的IP地址
+local_rewrite_ip = 0.0.0.0
+# 本机重写后的IP地址
+local_rewrite_ip6 = ::
 ;是否开启IPv6
 enable_ip6 = 0
 ;IPv4路由
