--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -74,7 +74,7 @@ tun_devname = fdslight
 
 ;local模式的配置
 [local]
-;本地虚拟DNS服务器
+;虚拟DNS服务器
 virtual_dns = 183.60.83.19
 ;虚拟IPv6 DNS
 virtual_dns6 = 2001:da8:8000:1:202:120:2:101
