--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -61,6 +61,10 @@ strict_https = 1
 ciphers = NULL
 ;公共配置选项
 [public]
+;是否使用DoT
+enable_dot = 0
+;DoT认证主机
+dot_auth_host = dns.alidns.com
 ;不走代理的DNS服务器,可以填写IPv6或者ipv4地址
 remote_dns = 223.6.6.6
 
