--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -78,6 +78,10 @@ tun_devname = fdslight
 
 ;local模式的配置
 [local]
+;本地ip地址,linux此项不需要,注意需要带前缀
+local_ip = 10.1.1.1/32
+;本地ipv6地址,linux此项不需要,注意需要带前缀
+local_ip6 = 9999::1/128
 ;虚拟DNS服务器
 virtual_dns = 183.60.83.19
 ;虚拟IPv6 DNS
