--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -65,7 +65,9 @@ ciphers = NULL
 enable_dot = 0
 ;DoT认证主机
 dot_auth_host = dns.alidns.com
-;不走代理的DNS服务器,可以填写IPv6或者ipv4地址,如果开启DoT,那么该DNS服务器同时也要支持传统DNS
+;DoT服务器IP地址
+dot_host = 223.6.6.6
+;不走代理的传统53端口DNS服务器,可以填写IPv6或者ipv4地址
 remote_dns = 223.6.6.6
 
 ;是否开启IPV6流量
