--- a/fdslight_etc/fn_client.ini
+++ b/fdslight_etc/fn_client.ini
@@ -63,6 +63,8 @@ ciphers = NULL
 [public]
 ;是否使用DoT
 enable_dot = 0
+;是否使用ipv6地址连接
+dot_enable_ipv6 = 0
 ;DoT认证主机
 dot_auth_host = dns.alidns.com
 ;DoT服务器IP地址
